# 2D_shape_decomposition

./: main.py  main_linux.py
bma_decomposition-main/bma_decomposition-main/: Cargo.toml
bma_decomposition-main/bma_decomposition-main/donut/: del.txt  donutbma.mat  madata.mat
bma_decomposition-main/bma_decomposition-main/src/: lib.rs  main.rs
bma_decomposition-main/bma_decomposition-main/src/bma/: bma.rs  mod.rs
bma_decomposition-main/bma_decomposition-main/src/functions/: functions_geometry.rs  functions_vec.rs  gap_evaluation.rs  kmeans.rs  mod.rs
bma_decomposition-main/bma_decomposition-main/src/generate_parameters/: mod.rs  param_rust.rs
bma_decomposition-main/bma_decomposition-main/star/: bnd.txt  nod.txt  noisystarbma.mat
bma_decomposition-main/bma_decomposition-main/wheel/: edg.txt  nod.txt  wheelbma.mat  wheelmadata.mat
bma_decomposition/cup/: bnd.txt  cupbma.mat  del.txt  edg.txt  madata.mat  nod.txt
bma_decomposition/donut/: bnd.txt  edg.txt  nod.txt
bma_decomposition/src/: lib.rs  main.rs
bma_decomposition/src/bma/: bma.rs
bma_decomposition/src/functions/: functions_geometry.rs  functions_vec.rs  gap_evaluation.rs  kmeans.rs  mod.rs
bma_decomposition/src/generate_parameters/: param_rust.rs
bma_decomposition/star/: del.txt  edg.txt  soft_2dskeletonization  starbma.mat
bma_decomposition/wheel/: bnd.txt  del.txt
compact-skel-2d/: Cargo.toml  README.md
compact-skel-2d/ressources/: bnd.txt  del.txt  edg.txt  nod.txt
compact-skel-2d/src/: change_format.py  lib.rs  main.rs
compact-skel-2d/src/boundary2d/: boundary2d.rs  mod.rs
(+5 files in other folders)
